--- a/website.html
+++ b/website.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="./Gmail-logo.png" >
+    <img src="./image1.jpg" >
     <h1>WELCOME TO THE PORTAL</h1>
+    
 </body>
 </html>
